Issue #12779 - fixed image alignment issue (#12780)

--- a/profile/themes/os_base/scss/pages/_news.scss
+++ b/profile/themes/os_base/scss/pages/_news.scss
@@ -8,15 +8,15 @@
     margin-top: 0;
   }
 }
-.page-node-type-news {
-  .region-content {
-    .field--name-field-photo {
-      float: right;
-      margin-left: 1em;
-      margin-bottom: 1em;
-    }
-    .field--name-body {
-      overflow: hidden;
+article.news {
+  .field--name-field-photo {
+    float: right;
+    margin-left: 1em;
+    margin-bottom: 1em;
+  }
+  .field--name-body {
+    &:after, &:before {
+      display: initial;
     }
   }
 }
